one more chapter.

--- a/jclox/Properties/launchSettings.json
+++ b/jclox/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "jclox": {
       "commandName": "Project",
-      "commandLineArgs": "test2.jclox",
-      "workingDirectory": "Q:\\dev2\\craftingInterpreter\\jclox\\tests"
+      "commandLineArgs": "ClassMethodCall.lox",
+      "workingDirectory": "Q:\\dev2\\craftingInterpreter\\jclox\\examples\\class"
     }
   }
 }
